Agregué generación de PDF al final del wizard

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -99,7 +99,7 @@ html {
 
 /*Background color*/
 #grad1 {
-  background-color: : #9C27B0;
+  /*background-color:  #9C27B0;*/
   /*background-image: linear-gradient(120deg, #FF4081, #81D4FA);*/
 }
 
